--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           id="video"
           playsinline
           crossorigin="anonymous"
-          src="video.mp4"
+          src="VID-20250525-WA0000.mp4"
         ></video>
       </a-assets>
 
