--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: trigger.mind"
+      mindar-image="imageTargetSrc: targets.mind.txt"
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
